Bug 450344 - No way to tell identically-named monitors apart
Summary: No way to tell identically-named monitors apart
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kscreen (other bugs)
Version First Reported In: 5.24.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: ratijas
URL:
Keywords: regression, usability
: 449059 456059 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-02-15 21:43 UTC by Jonathan Cox
Modified: 2026-04-16 02:26 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26
Sentry Crash Report:


Attachments
Screenshot of system settings with monitor configuration (92.64 KB, image/png)
2022-02-15 21:43 UTC, Jonathan Cox
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Cox 2022-02-15 21:43:49 UTC
Created attachment 146794 [details]
Screenshot of system settings with monitor configuration

SUMMARY
When adjusting monitor orientation on 5.24 and 5.24.1 in Xorg, it is next to impossible for me to tell which monitor is which. When you click Identify it simply shows the model number of my screens, and both are identical.

Previous versions of KDE, and the Wayland session for 5.24 and 5.24.1 have the name of the connector in the description. The current Xorg release shows the model number of my screens, which both are the same model, and the information is useless. Connector name isn't really necessary, an arbitrary Screen 1 and Screen 2 would suffice when the Identify button is pressed.

Operating System: Arch Linux
KDE Plasma Version: 5.24.1
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.2
Kernel Version: 5.16.9-zen1-1-zen (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-4790K CPU @ 4.00GHz
Memory: 31.3 GiB of RAM
Graphics Processor: llvmpipe <--- Not sure where llvm pipe is coming from, currently using Nvidia 5.10.54 with a Geforce RTX 3060
Comment 1 Méven Car 2022-02-17 11:44:55 UTC
You have screens that have the same serialNumber (LX1AA0044210), that shouldn't be but well hardware manufacturers don't necessarily follow logic...
Apparently the same serial number is used for all their H236HL screens.

So we need to handle this, detecting it is easy, but then we need to improve UI.

We already special cased when models are the same, then serial number is displayed.
Connector names are unreliable data, but anything additional would be better.

I expect this to be reproducible in Wayland as well.
Comment 2 Nate Graham 2022-02-17 15:08:52 UTC
If  all screens have the same serial numbers as well as the same names, perhaps we can additionally show connector names like we did before. Connector names aren't great, but they're at least better than nothing IMO.
Comment 3 Jonathan Cox 2022-02-17 19:20:20 UTC
Wayland was showing connector names oddly enough, 5.23 series on Xorg did as well. 
(In reply to Méven Car from comment #1)
> You have screens that have the same serialNumber (LX1AA0044210), that
> shouldn't be but well hardware manufacturers don't necessarily follow
> logic...
> Apparently the same serial number is used for all their H236HL screens.
> 
> So we need to handle this, detecting it is easy, but then we need to improve
> UI.
> 
> We already special cased when models are the same, then serial number is
> displayed.
> Connector names are unreliable data, but anything additional would be better.
> 
> I expect this to be reproducible in Wayland as well.
Comment 4 Jonathan Cox 2022-02-17 19:21:09 UTC
What about a simple 1 and 2?

Arbitrary numbers based on total number of monitors found?

(In reply to Nate Graham from comment #2)
> If  all screens have the same serial numbers as well as the same names,
> perhaps we can additionally show connector names like we did before.
> Connector names aren't great, but they're at least better than nothing IMO.
Comment 5 Nate Graham 2022-02-17 19:25:13 UTC
Oh, that's a way better idea!
Comment 6 Nate Graham 2022-06-28 18:43:16 UTC
*** Bug 456059 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2022-09-08 19:56:07 UTC
*** Bug 449059 has been marked as a duplicate of this bug. ***
Comment 8 tomashnyk 2022-09-08 21:20:24 UTC
(In reply to Nate Graham from comment #5)
> Oh, that's a way better idea!

How would you determine for the numbering to be consistent? Also, lets say I have one monitor connected throu HDMI and the other through DP/USB-C. There is a chance I know which is which. Arbitrary numbers will not tell me that. (meaning I think port names are better than arbitraty numbers)
Comment 9 ratijas 2022-09-09 00:03:31 UTC
I'd give it a shot.

On one hand, I like the simplicity of idea to use sequential numbers. I guess that's what Windows does too?  I don't get the concern "for the numbering to be consistent" — assuming it was meant to mean "persistent" — IMHO it would be OK for such number tags to be temporary as it is a throwaway one-shot piece information that a user won't have to configure over and over again, so as long as it doesn't change while the KCM is open it should be fine.

On the other hand, KDE is often targeting advanced users first, and multi-screen IS kind of advanced setup as it is anyway, so showing a connector codename wouldn't hurt. I wonder how translatable/localizable are they though.
Comment 10 Bug Janitor Service 2022-09-09 00:39:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2922
Comment 11 Bug Janitor Service 2022-09-09 01:03:12 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kscreen/-/merge_requests/129
Comment 12 ratijas 2022-09-10 17:40:52 UTC
Git commit 050c1a7e4f66135f1c83eb3331da4ba822429883 by ivan tkachenko.
Committed on 10/09/2022 at 10:23.
Pushed by ratijas into branch 'master'.

kcm: Show connector name for monitors with identical everything

See also: https://invent.kde.org/plasma/kwin/-/merge_requests/2922

M  +7    -4    common/utils.cpp
M  +2    -2    common/utils.h
M  +10   -7    kcm/output_model.cpp

https://invent.kde.org/plasma/kscreen/commit/050c1a7e4f66135f1c83eb3331da4ba822429883
Comment 13 ratijas 2022-09-10 17:41:25 UTC
Git commit fe1f7203071ab46159d8bff4b1114b1a8db021a8 by ivan tkachenko.
Committed on 10/09/2022 at 10:19.
Pushed by ratijas into branch 'master'.

effects/outputlocator: Show connector name for monitors with identical everything

See also: https://invent.kde.org/plasma/kscreen/-/merge_requests/129

M  +8    -0    src/effects/outputlocator/outputlocator.cpp

https://invent.kde.org/plasma/kwin/commit/fe1f7203071ab46159d8bff4b1114b1a8db021a8
Comment 14 Bug Janitor Service 2026-04-16 02:24:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin-x11/-/merge_requests/94
Comment 15 Bug Janitor Service 2026-04-16 02:26:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/9090