effects/outputlocator: Show connector name for monitors with identical everything

See also: https://invent.kde.org/plasma/kscreen/-/merge_requests/129

BUG: 450344